<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/primaryColor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/bordo">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/error"/>

                <TextView
                    android:id="@+id/tv_errore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/title"
                    android:text="Credenziali errate"
                    android:textColor="@color/buttonCanc"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/title"
                android:text="Username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="Inserisci qui l'username ..."
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/title"
                android:text="Password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Inserisci qui la password ..."
                android:text=""/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:onClick="login"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>