<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/etAlertPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:inputType="textPassword"/>
</LinearLayout>