...
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="right"
            android:background="@color/primaryDarkColor">

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logout"
                android:onClick="logout"/>

        </LinearLayout>
...
