...
            android:background="@drawable/bordo_verde_state"
            android:text="v"
            android:textSize="15dp"
            android:textColor="@color/buttonSave"/>

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:background="@drawable/bordo_rosso_state"
            android:text="x"
...
