...
        android:layout_toRightOf="@id/ll_descrizione"
        android:layout_below="@id/tv_nome"
        android:layout_above="@id/ll_barra"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/c_allergie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Seleziona per indicare allergie"
            android:onClick="check"/>

...
            android:layout_gravity="center"
            android:text="+"
            android:textSize="15dp"
            android:onClick="changeQuantity"/>

        <Button
            android:id="@+id/btn_aggiungi"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:background="@drawable/bordo_azzurro_state"
            android:text="Aggiungi"
...
