<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:numColumns="5"
        android:id="@+id/gv_piatti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>